farm/farm-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: farm-deployment
  namespace: apps
  labels:
    site: farm-ram9
spec:
  replicas: 2
  selector:
    matchLabels:
      site: farm-ram9
  template:
    metadata:
      labels:
        site: farm-ram9
    spec:
      imagePullSecrets:
        - name: c8n-robotarmy   
      containers:
        - name: farm-ram9
          image: c8n.io/robotarmy/farm-site:0.1.1
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          resources:
            requests:
              memory: "4Mi"
              cpu: "200m"
            limits:
              memory: "8Mi"
              cpu: "300m"
