farm/farm-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    site: farm-ram9
  name: farm-service
  namespace: apps
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    site: farm-ram9
