farm/farm-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: farm-ingress
  labels:
    site: farm-ram9
  namespace: apps
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: farm.ram9.cc
    http:
      paths:
      - backend:
          service:
            name: farm-service
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - farm.ram9.cc
    secretName: tls-cc-ram9-farm
